rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__file_info_detecting_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                    ┌File Information──────────────────────────────────────────────────────────────┐                    ",
        "                    │  Name     photo.png                                                          │                    ",
        "                    │  Path     /test/documents/photo.png                                          │                    ",
        "                    │  Size     2.0 KB (2048 bytes)                                                │                    ",
        "                    │  Type     File                                                               │                    ",
        "                    │                                                                              │                    ",
        "                    │  Created  N/A                                                                │                    ",
        "                    │  Modified [TIMESTAMP]                                                │                    ",
        "                    │  Accessed N/A                                                                │                    ",
        "                    │                                                                              │                    ",
        "                    │  Detecting... *                                                              │                    ",
        "                    │                                                                              │                    ",
        "                    │  Enter/Esc: close                                                            │                    ",
        "                    └──────────────────────────────────────────────────────────────────────────────┘                    ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 37, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 14, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 15, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 16, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 17, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 19, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 20, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 21, y: 25, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 25, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 25, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 99, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
